# companion_software_stack

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .pipeline-state  24Industries_Interview_Prep.docx  ACKNOWLEDGMENTS.md  AGENT_REPORT.md  API.md  BUG_FIXES.md  CI_ISSUES.md  CLAUDE.md  CMakeLists.txt  CODEOWNERS  COMMERCIAL_LICENSE.md  CPP_PATTERNS_GUIDE.md  CPP_Perception_Stack_Curriculum.docx  DEVELOPMENT_WORKFLOW.md  INSTALL.md  LICENSE  Master_Integration_Guide.docx  NOTICE  PIPELINE_LICENSE.md  PRODUCTION_READINESS.md  PROGRESS.md  Process_3_SLAM_VIO_Nav_print.docx  Process_4_Mission_Planner.docx  Process_4_Mission_Planner_print.docx  README.md  ROADMAP.md  ai.robots.txt  extract_all_code.py  extract_all_v2.py  pyproject.toml  work_instructions.md
common/hal/: CMakeLists.txt
common/hal/include/hal/: cosys_camera.h  cosys_depth.h  cosys_echo_backend.h  cosys_fc_link.h  cosys_groundtruth_radar.h  cosys_imu.h  cosys_name_filter.h  cosys_name_resolver.h  cosys_radar.h  cosys_rpc_client.h  cosys_segmentation_backend.h  cpu_semantic_projector.h  depth_anything_v2.h  edge_contour_sam_backend.h  fastsam_inference_backend.h  gazebo_camera.h  gazebo_imu.h  gazebo_radar.h  hal_factory.h  icamera.h  idepth_estimator.h  ievent_camera.h  ifc_link.h  igcs_link.h  igimbal.h  iimu_source.h  iinference_backend.h  iradar.h  isemantic_projector.h  ivolumetric_map.h  mavlink_fc_link.h  pixel_format.h  simulated_camera.h  simulated_depth_estimator.h  simulated_event_camera.h  simulated_fc_link.h  simulated_gcs_link.h  simulated_gimbal.h  simulated_imu.h  simulated_inference_backend.h  (+4 more)
common/hal/src/: cosys_camera.cpp  cosys_depth.cpp  cosys_fc_link.cpp  cosys_imu.cpp  cosys_radar.cpp  cosys_rpc_client.cpp  depth_anything_v2.cpp
common/ipc/: CMakeLists.txt
common/ipc/include/ipc/: ipc_types.h  ipublisher.h  iserializer.h  iservice_channel.h  isubscriber.h  message_bus.h  message_bus_factory.h  raw_serializer.h  shm_message_bus.h  shm_publisher.h  shm_reader.h  shm_service_channel.h  shm_subscriber.h  shm_types.h  shm_writer.h  topic_resolver.h  wire_format.h  zenoh_liveliness.h  zenoh_message_bus.h  zenoh_network_config.h  zenoh_publisher.h  zenoh_session.h  (+3 more)
common/recorder/: CMakeLists.txt
common/util/: CMakeLists.txt
process2_perception/: CMakeLists.txt
process2_perception/include/perception/: bytetrack_tracker.h  color_contour_detector.h  detector_class_maps.h  detector_interface.h  detector_switcher.h  fusion_engine.h  ifusion_engine.h  itracker.h  kalman_tracker.h  mask_class_assigner.h  mask_depth_projector.h  opencv_yolo_detector.h  simulated_detector.h  types.h  ukf_fusion_engine.h  voxel_clusterer.h  voxel_instance_tracker.h  voxel_obstacle_snapshot.h  yolo_seg_inference_backend.h
process2_perception/src/: bytetrack_tracker.cpp  detector_factory.cpp  fusion_engine.cpp  kalman_tracker.cpp  main.cpp  opencv_yolo_detector.cpp  simulated_detector.cpp  ukf_fusion_engine.cpp  yolo_seg_inference_backend.cpp
process3_slam_vio_nav/: CMakeLists.txt
process3_slam_vio_nav/include/slam/: ifeature_extractor.h  imu_preintegrator.h  istereo_matcher.h  ivio_backend.h  ivio_interface.h  ivisual_frontend.h  slam_math.h  swvio_backend.h  swvio_types.h  types.h  vio_types.h
process3_slam_vio_nav/src/: imu_preintegrator.cpp  main.cpp  swvio_backend.cpp
process4_mission_planner/: CMakeLists.txt
process4_mission_planner/include/planner/: astar_planner.h  cross_veto_decision.h  dstar_lite_planner.h  fault_manager.h  fault_response_executor.h  gcs_command_handler.h  geofence.h  grid_cell.h  grid_planner_base.h  iobstacle_avoider.h  ipath_planner.h  mission_fsm.h  mission_state_tick.h  obstacle_avoider_3d.h  occupancy_grid_3d.h  planner_factory.h  planner_stall_handler.h  radar_fov_gate.h  static_obstacle_layer.h
process4_mission_planner/src/: main.cpp
process6_payload_manager/: CMakeLists.txt
process6_payload_manager/include/payload/: auto_tracker.h  gimbal_controller.h
process6_payload_manager/src/: main.cpp
process7_system_monitor/: CMakeLists.txt
process7_system_monitor/include/monitor/: iprocess_monitor.h  process_manager.h  sys_info.h
process7_system_monitor/src/: main.cpp
tests/: CMakeLists.txt  TESTS.md  cleanup_old_runs.sh  lib_check_contacts.py  lib_check_proximity.py  lib_scenario_logging.sh  perception_baseline.json  run_perception_ci.sh  run_scenario.sh  run_scenario_cosys.sh  run_scenario_gazebo.sh  run_tests.sh  test_astar_planner.cpp  test_baseline_capture.cpp  test_baseline_comparator.cpp  test_bytetrack_tracker.cpp  test_clock_migration_767.cpp  test_clock_migration_768.cpp  test_collision_recovery.cpp  test_color_contour_detector.cpp  test_comms.cpp  test_comms_heartbeat.cpp  test_config.cpp  test_config_validator.cpp  test_contracts_manifest.cpp  test_correlation.cpp  test_cosys_camera_config.cpp  test_cosys_fc_link.cpp  test_cosys_hal_backends.cpp  test_crasher.cpp  test_cross_veto_decision.cpp  test_deploy_review.sh  test_depth_anything_v2.cpp  test_depth_estimator.cpp  test_detector_switcher.cpp  test_diagnostic.cpp  test_dstar_lite_planner.cpp  test_event_bus.cpp  test_event_camera.cpp  test_fastsam_backend.cpp  (+90 more)
tests/benchmark/: baseline_capture.cpp  baseline_capture.h  baseline_comparator.cpp  baseline_comparator.h  compare_to_baseline_main.cpp  cosys_gt_emitter.cpp  dashboard_renderer.py  gt_emitter.cpp  gt_emitter.h  perception_metrics.cpp  perception_metrics.h  test_dashboard_renderer.py
tests/integration/: integration_harness.h  test_fault_cascade.cpp  test_ipc_roundtrip.cpp
tests/test_orchestrator/: conftest.py  test_boundaries.py  test_checkpoint_notifications.py  test_config.py  test_console.py  test_context.py  test_deploy_issue.py  test_notifications.py  test_pipeline_fsm.py  test_pipeline_state.py  test_preflight.py  test_routing.py  test_tech_lead.py  test_tmux.py
tools/cosys_populate_scene/: CMakeLists.txt  main.cpp
tools/cosys_telemetry_poller/: CMakeLists.txt  main.cpp
tools/fault_injector/: CMakeLists.txt  main.cpp
tools/flight_replay/: CMakeLists.txt  main.cpp
(+683 files in other folders)
